# FastAPI-Practice

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/configs/: .env_example  configs.py
src/database/: database.py
src/models/: post.py
src/routers/: post.py
tests/: conftest.py
tests/routers/: test_post.py
