[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = "FastAPI practice"
authors = ["BenBen <vince7ben23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
black = "^23.11.0"
ruff = "^0.1.9"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
