[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = "FastAPI practice"
authors = ["BenBen <vince7ben23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
black = "^23.11.0"
ruff = "^0.1.9"
isort = "^5.13.2"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py"
]

[tool.pytest.ini_options]
addopts = "-v --cov"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
